--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,21 +5,13 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo "Installing Dependencies"
-      - npm install
+      - npm ci
   build:
     commands:
-      - echo "Building application"
       - npm run build
-  post_build:
-    commands:
-      - echo "Build Completed on 'date'"
       - mkdir -p deploy
       - cp -r dist/* deploy/
-      - cp appspec.yaml deploy/
-      - cp -r scripts/ deploy/scripts/
 artifacts:
   files:
-    - deploy/**/*
-  discard-paths: no
-  
+    - '**/*'
+  base-directory: deploy
